[gd_scene load_steps=10 format=2]

[ext_resource path="res://Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Options/CloseOptionsButton.png" type="Texture" id=2]
[ext_resource path="res://Menu/Buttons/SettingsButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Options/OptionsButton.png" type="Texture" id=4]
[ext_resource path="res://Options/MenuButton.png" type="Texture" id=5]
[ext_resource path="res://Menu/Buttons/SettingsButtonDefault.png" type="Texture" id=6]
[ext_resource path="res://Menu/Buttons/SettingsButtonHover.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "OptionsHide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -60, 10 ), Vector2( -130, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -130, 10 ), Vector2( -60, 10 ), Vector2( 10, 10 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -130, 10 ), Vector2( -60, 10 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -60, 10 ), Vector2( -130, 10 ) ]
}

[node name="Options" type="Node2D"]
script = ExtResource( 1 )

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 138.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 7.0
margin_right = 141.0
margin_bottom = 413.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="OptionsContainer"]
margin_right = 280.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="MenuButton" type="TextureButton" parent="OptionsContainer"]
margin_top = 139.0
margin_right = 280.0
margin_bottom = 267.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="SettingButton" type="TextureButton" parent="OptionsContainer"]
margin_top = 278.0
margin_right = 280.0
margin_bottom = 535.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OptionsHide = SubResource( 1 )
anims/OptionsShow = SubResource( 2 )
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="OptionsContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="OptionsContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="OptionsContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
